chore(reno): make upgrade section of release notes first (#4512)
Since usually upgrade notes are of more immediate importance to customers, they should come before features. This PR adds an explicit sections order and puts upgrades at the top. Previously the order was

    [features, New Features]
    [issues, Known Issues]
    [upgrade, Upgrade Notes]
    [api, API Changes]
    [security, Security Issues]
    [fixes, Bug Fixes]

--- a/releasenotes/config.yaml
+++ b/releasenotes/config.yaml
@@ -1,6 +1,16 @@
 ---
 default_branch: origin/1.x
 unreleased_version_title: Unreleased
+sections:
+  # The prelude section is implicitly included.
+  - [upgrade, Upgrade Notes]
+  - [deprecations, Deprecation Notes]
+  - [features, New Features]
+  - [issues, Known Issues]
+  - [api, API Changes]
+  - [security, Security Issues]
+  - [fixes, Bug Fixes]
+  - [other, Other Changes]
 
 # The default is: (?P<pre_release>\.v?\d+(?:[ab]|rc)+\d*)$
 # DEV: We have done this to fix how reno collapses pre-releases
